[package]
name = "drbg"
version = "0.1.3"
edition = "2021"
description = """
Crypographic random number generator CTR_DRBG defined by NIST SP 800-90A R1.
"""
license = "MIT"
keywords = ["csprng","CTR_DRBG", "random", "rng"]
categories = ["algorithms", "cryptography"]
repository = "https://github.com/dpottavio/drbg"
readme = "README.md"

[dependencies]
aes = "0.8"
getrandom = { version = "0.2", features = ["std"]}

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
hex = "0.4"

[[bench]]
name = "ctr_bench"
harness = false
