[package]
name = "drbg"
version = "1.0.0"
edition = "2021"
description = """
Crypographic random number generator CTR_DRBG defined by NIST SP 800-90A R1.
"""
license = "MIT"
keywords = ["csprng","CTR_DRBG", "random", "rng", "no_std"]
categories = ["algorithms", "cryptography"]
repository = "https://github.com/dpottavio/drbg"
readme = "README.md"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
aes = "0.8"
getrandom = { version = "0.2"}

[features]
default = ["std"]
std = []

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
hex = "0.4"

[[bench]]
name = "ctr_bench"
harness = false
